Bug 255435 - GraphicsLayerWC leaks BitmapTexture in BitmapTexturePool
Summary: GraphicsLayerWC leaks BitmapTexture in BitmapTexturePool
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Platform (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Fujii Hironori
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2023-04-13 21:34 PDT by Fujii Hironori
Modified: 2023-04-14 12:28 PDT (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Fujii Hironori 2023-04-13 21:34:00 PDT
GraphicsLayerWC leaks BitmapTexture in BitmapTexturePool
Comment 1 Fujii Hironori 2023-04-13 21:45:39 PDT
Pull request: https://github.com/WebKit/WebKit/pull/12727
Comment 2 EWS 2023-04-14 12:27:43 PDT
Committed 262984@main (e9dc300e16eb): <https://commits.webkit.org/262984@main>

Reviewed commits have been landed. Closing PR #12727 and removing active labels.
Comment 3 Radar WebKit Bug Importer 2023-04-14 12:28:18 PDT
<rdar://problem/108061004>