GraphicsLayerWC leaks BitmapTexture in BitmapTexturePool https://bugs.webkit.org/show_bug.cgi?id=255435

Reviewed by Don Olmstead.

GraphicsLayerWC runs TextureMapper in the OpenGL thread of the GPU
process that doesn't use RunLoop. BitmapTexturePool leaks cached
textures because RunLoop::Timer doesn't work in the thread.

We should explicitly remove cached textures in the thread.

* Source/WebCore/platform/graphics/texmap/BitmapTexturePool.h:
* Source/WebCore/platform/graphics/texmap/TextureMapper.cpp:
(WebCore::TextureMapper::releaseUnusedTexturesNow):
* Source/WebCore/platform/graphics/texmap/TextureMapper.h:
* Source/WebKit/GPUProcess/graphics/wc/WCScene.cpp:
(WebKit::WCScene::update):

Canonical link: https://commits.webkit.org/262984@main